# minimal_autograd

./: .gitignore  AGENTS.md  CMakeLists.txt  CUDA_HARDENING_PLAN.md  FFT_AUTOGRAD_HARDENING_PLAN.md  README.md  deliverable.md
.claude/: CLAUDE.md
.claude/skills/caveman/: SKILL.md
.claude/skills/codex-delegate/: SKILL.md
.claude/skills/grilled-me/: SKILL.md
.claude/skills/opencode-delegate/: SKILL.md
.claude/skills/phase-gated-implementation/: SKILL.md
.codex/skills/caveman/: SKILL.md
.codex/skills/caveman/agents/: openai.yaml
.codex/skills/claude-delegate/: SKILL.md
.codex/skills/claude-delegate/agents/: openai.yaml
.codex/skills/grilled-me/: SKILL.md
.codex/skills/grilled-me/agents/: openai.yaml
.codex/skills/handoff/: SKILL.md
.codex/skills/handoff/agents/: openai.yaml
.codex/skills/karpathy/: SKILL.md
.codex/skills/karpathy/agents/: openai.yaml
.codex/skills/opencode-delegate/: SKILL.md
.codex/skills/opencode-delegate/agents/: openai.yaml
.codex/skills/phase-gated-implementation/: SKILL.md
.github/workflows/: tests.yml
.opencode/: AGENTS.md
.opencode/skills/handoff/: SKILL.md
.opencode/skills/karpathy-best-practices/: SKILL.md
examples/: linear_regression.cpp  mnist_classify_cpu.cpp  mnist_classify_gpu.cpp  mnist_data.h
include/: autograd.h
include/autograd/: complex.h  conv.h  cuda_core.h  diffusion.h  fft.h  function.h  loss.h  module.h  norm.h  ops.h  optim.h  shape.h  tensor.h  variable.h
src/: conv.cpp  cuda_core.cu  cuda_fft.cu  fft.cpp  loss.cpp  module.cpp  norm.cpp  ops.cpp  optim.cpp  variable.cpp
test/: grad_check.h  test_conv.cpp  test_core.cpp  test_cuda_core.cpp  test_cuda_fft.cpp  test_diffusion.cpp  test_extensions.cpp  test_fft.cpp  test_nn.cpp  test_smoke.cpp
